# Zen

./: CMakeLists.txt  README.md  test.cpp
zen/: algorithm.h  assert.h  config.h  debug.h  equals.h  foreach.h  forward.h  function.h  make.h  pp.h  print.h  requires.h  returns.h  static_assert.h  test.h  traits.h  typeof.h  utility.h
zen/algorithm/: accumulate.h  adjacent_difference.h  adjacent_filter.h  adjacent_find.h  adjacent_transform.h  all_of.h  any_of.h  at.h  at_c.h  at_key.h  back.h  back_or.h  binary_search.h  concat.h  contains.h  count.h  count_if.h  cycle.h  delimit.h  drop.h  drop_while.h  elements_at.h  elements_at_c.h  elements_at_key.h  empty.h  equal.h  filter.h  find.h  find_end.h  find_first_of.h  find_if.h  find_if_not.h  flat.h  fold.h  for_each.h  front.h  front_or.h  fused_for_each.h  indirect.h  inner_product.h  (+36 more)
zen/function/: adaptor.h  always.h  builder.h  compose.h  conditional.h  defer.h  fix.h  fuse.h  general.h  identity.h  implicit.h  invoke.h  is_callable.h  is_pure.h  lazy.h  overload.h  partial.h  perfect.h  pipable.h  placeholders.h  regular.h  result_of.h  reveal.h  static.h  variadic.h
zen/iterator/: block_iterator.h  cycle_iterator.h  distance.h  flat_iterator.h  fusion_iterator.h  iterator_traits.h  join_iterator.h  mbind_iterator.h  minimum_traversal.h  next.h  stride_iterator.h  unfold_iterator.h
zen/mpl/: all_of.h  any_of.h  is_placeholder_expression.h  lambda.h  none_of.h  placeholders.h  quote.h  replace_args.h
zen/range/: any_range.h  array_range.h  block.h  counting.h  cycle.h  directory_range.h  distance.h  filter.h  (+19 more)
(+35 files in other folders)
